--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /RemotePanorama/RemotePanorama/bin
 /RemotePanorama/RemotePanorama/obj
+/PanoramaClient/TestHandler/bin
+/PanoramaClient/TestHandler/obj
