--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /RemotePanorama/RemotePanorama/obj
 /PanoramaClient/TestHandler/bin
 /PanoramaClient/TestHandler/obj
+/PanoramaClient/.vs
+/RemotePanorama/obj
